<resources>
    <string name="app_name">AlgeBrawler</string>
    <string name="high_scores">High Scores</string>
    <string name="play_game">Play Game</string>
    <string name="algebrawler">AlgeBRAWLER</string>
    <string name="share_score">Share Score</string>
    <string name="settings">Settings</string>
    <string name="sound_effects">Sound Effects</string>

    <string-array name="sprites">
        <item>Knight</item>
        <item>Robot</item>
        <item>Ninja</item>
        <item>Ninja Girl</item>
        <item>Cowgirl</item>
        <item>Zombie</item>
        <item>Zombie Girl</item>
    </string-array>

    <string-array name="themes">
        <item>Grassland</item>
        <item>Graveyard</item>
        <item>Winter</item>
        <item>Sci-Fi</item>
        <item>Desert</item>
    </string-array>

    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="help_info_one">Find X in each question.</string>
    <string name="help_info_two">Answer correct to attack.</string>
    <string name="help_info_three">Wrong answers get you attacked.</string>
    <string name="help_info_four">Shake phone to pass a question.</string>
    <string name="help_info_five">Change characters and battleground in settings.</string>
    <string name="help_info_six">Difficulty determines player HP</string>
    <string name="about_info">Design and built by Cameron Kent</string>

    <string name="create_table">CREATE TABLE %1$s (_id INTEGER PRIMARY KEY, %2$s TEXT)</string>
    <string name="delete_table">DROP TABLE IF EXISTS %1$s</string>
</resources>